chore(commitizen): add commitizen

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/d3-shape": "^3.1.6",
     "@types/node": "^20.10.3",
     "autoprefixer": "^10.4.16",
-    "graphql": "^16.6.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
