--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,18 @@ dist
 .vercel
 .netlify
 netlify
+.vinxi
+
+# Environment
+.env
+.env*.local
 
 # dependencies
 /node_modules
 
 # IDEs and editors
+.vscode/*
+!.vscode/extensions.json
 /.idea
 .project
 .classpath
