--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,7 +1,7 @@
 plugins:
-  # - prettier-plugin-css-order
+  - prettier-plugin-css-order
   - prettier-plugin-tailwindcss
-# cssDeclarationSorterOrder: smacss
+cssDeclarationSorterOrder: smacss
 tailwindConfig: ./tailwind.config.js
 tailwindFunctions:
   - clsx
