--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "postcss": "^8.4.32",
+    "postcss-url": "^10.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
