chore(vinxi): add vinxi
* add associated solid start packages that are used in the current template along with updated
patterns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
-    "jsxImportSource": "solid-js",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "jsx": "preserve",
+    "jsxImportSource": "solid-js",
+    "allowJs": true,
+    "noEmit": true,
     "strict": true,
-    "types": ["vite/client"],
-    "baseUrl": "./",
+    "types": ["vinxi/client", "vite/client"],
+    "isolatedModules": true,
     "paths": {
       "~/*": ["./src/*"]
     }
