--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dsm23-solid-start-portfolio",
+  "type": "module",
   "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start",
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "codegen": "gql-gen -r dotenv/config"
@@ -25,14 +26,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
-    "solid-start-netlify": "^0.3.10",
-    "solid-start-node": "^0.3.10",
     "tailwindcss": "^3.3.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
-    "undici": "^5.16.0",
-    "vite": "^4.5.1",
-    "vite-plugin-pwa": "^0.17.3",
+    "vinxi": "^0.3.11",
     "workbox-build": "^7.0.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
@@ -40,17 +35,17 @@
   },
   "dependencies": {
     "@contentful/rich-text-types": "^16.0.2",
-    "@solidjs/meta": "^0.29.1",
-    "@solidjs/router": "^0.9.1",
+    "@solidjs/meta": "^0.29.3",
+    "@solidjs/router": "^0.13.1",
+    "@solidjs/start": "1.0.0-rc.0",
     "@tanstack/solid-form": "^0.10.3",
     "clsx": "^2.0.0",
     "d3-shape": "^3.2.0",
     "geist": "^1.2.0",
     "puppeteer": "^21.6.0",
     "solid-headless": "^0.13.1",
-    "solid-js": "^1.8.7",
+    "solid-js": "^1.8.16",
     "solid-js-form": "^0.1.8",
-    "solid-start": "^0.3.10",
     "tailwind-merge": "^2.1.0",
     "yup": "^0.32.11"
   },
