--- a/package.json
+++ b/package.json
@@ -7,26 +7,42 @@
     "start": "vinxi start",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "codegen": "gql-gen -r dotenv/config"
+    "lint": "eslint src --report-unused-disable-directives --max-warnings 0",
+    "codegen": "gql-gen"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@graphql-codegen/cli": "^2.16.3",
-    "@graphql-codegen/core": "^2.6.8",
-    "@graphql-codegen/typescript": "^2.8.7",
-    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/core": "^4.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@nabla/vite-plugin-eslint": "^2.0.2",
     "@types/d3-shape": "^3.1.6",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "^44.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-solid": "^0.13.0",
+    "graphql": "^16.8.1",
     "postcss": "^8.4.32",
     "postcss-url": "^10.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3",
+    "typescript-eslint": "^7.5.0",
     "vinxi": "^0.3.11",
+    "vite": "^5.2.7",
     "workbox-build": "^7.0.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
@@ -46,7 +62,8 @@
     "solid-js": "^1.8.16",
     "solid-js-form": "^0.1.8",
     "tailwind-merge": "^2.1.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.22.4"
   },
   "engines": {
     "node": ">=20"
