--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@nabla/vite-plugin-eslint": "^2.0.2",
+    "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/d3-shape": "^3.1.6",
     "@types/node": "^20.12.3",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.5",
@@ -32,7 +32,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "4.0.0-alpha.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "typescript-eslint": "^7.5.0",
