--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "solid-js": "^1.8.16",
     "solid-js-form": "^0.1.8",
     "tailwind-merge": "^2.2.2",
+    "terracotta": "^1.0.5",
     "yup": "^0.32.11",
     "zod": "^3.22.4"
   },
